--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-h1, h4{
+h1, h3, h4{
   font-family: "Sour Gummy", sans-serif;
 }
 
-h1 {
+h1, h3 {
   font-weight: 900;
   color: rgb(255, 0, 64);  
 }
@@ -35,4 +35,27 @@ h1 {
 #team-members a{
   text-decoration: none;
   font-size: 14px;
+}
+
+.form-container{
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+form div{
+  margin-bottom: 20px;
+}
+
+button{
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 5px 10px;
+}
+
+button:hover{
+  transition: 0.3s;
+  border: 2px solid rgb(255, 0, 64);
+  color: rgb(255, 0, 64);
+  padding: 10px 20px;
 }
