--- a/css/style.css
+++ b/css/style.css
@@ -46,15 +46,15 @@ form div{
   margin-bottom: 20px;
 }
 
-button{
+.my-button{
   background-color: transparent;
   border: 1px solid black;
   border-radius: 10px;
   padding: 5px 10px;
 }
 
-button:hover{
-  transition: 0.3s;
+.my-button:hover{
+  transition: 0.2s;
   border: 2px solid rgb(255, 0, 64);
   color: rgb(255, 0, 64);
   padding: 10px 20px;
