[FIX] Fixed blank attributes and comment

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+/* ******************************************** */
+/*                     TAGS                     */
+/* ******************************************** */
 h1, h3, h4{
   font-family: "Sour Gummy", sans-serif;
 }
@@ -7,6 +10,9 @@ h1, h3 {
   color: rgb(255, 0, 64);  
 }
 
+/* ******************************************** */
+/*                     CARDS                    */
+/* ******************************************** */
 #team-members{
   color: white;
 }
@@ -37,6 +43,9 @@ h1, h3 {
   font-size: 14px;
 }
 
+/* ******************************************** */
+/*                     FORM                     */
+/* ******************************************** */
 .form-container{
   max-width: 80%;
   margin: 0 auto;
